2013-07-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_con.m: (0.1.1)

	- Fix bug. If the input connectivity matrix was boolean, then
	distances got casted to boolean too. To fix this, we cast the
	connectivity matrix to double.

	* Add matlab/ManifoldToolbox/dmatrix_con.m: (0.1.0)

	- DMATRIX_CON Sparse distance and shortest-path distance matrices
	between the nodes of a mesh from a connectivity matrix.

	* Add matlab/ManifoldToolbox/congrow.m: (0.1.0)
	* Add matlab/test/test_congrow.m: (0.1.0)

	- CONGROW Grow the local neighbourhoods in a connectivity matrix.

	* matlab/ManifoldToolbox/dmatrix_sphmesh.m: (0.2.0)
	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.2.0)
	* matlab/test/test_dmatrix_sphmesh.m: (0.1.1)
	* matlab/test/test_surface_tridomain: (0.1.1)

	- Swap the order of the input arguments to (tri, x). This allows
	that we pass only the edge description of the mesh, tri, without
	having to also give vertex coordinates. In addition, this also
	agrees with the format of the rest of mesh-related function in
	gerardus.

2013-07-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/quadsurf.m: (0.1.0)

	- QUADSURF Quadrangular mesh surface plot.

2013-07-03  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri_squeeze.m: (0.1.0)

	- TRI_SQUEEZE Remove disconnected vertices from triangular mesh.

2013-07-02  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.2.1)

	- Add entry for ManifoldToolbox in the summary.

	* Add matlab/ThirdPartyToolbox/SphereUniformSamplingToolbox:
	* matlab/add_gerardus_paths.m: (0.1.5)

	- Uniform Sampling of a Sphere by Anton Semechko. 05 Jun 2012
	(Updated 23 May 2013). Downloaded from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/37004-uniform-sampling-of-a-sphere

	- "The main function is titled 'ParticleSampleSphere' and allows
	you to create an approximately uniform triangular tessellation of
	the unit sphere by minimizing the generalized electrostatic